<resources>
	<string name="app_name">Speckdealer App</string>
	<string name="welcome">Willkommen</string>
	<string name="tile_sales">Verkauf</string>
	<string name="tile_sales_phone">Verkauf</string>
	<string name="tile_orders_phone">Bestel-&#10;lungen</string>
	<string name="tile_daily_report_phone">Tages-&#10;abschluss</string>
	<string name="tile_settings_phone">Einstellungen</string>
	<string name="tile_item_maintenance_phone">Artikel-&#10;pflege</string>
	<string name="tile_deposit_return_phone">Pfand-&#10;rückgabe</string>
	<string name="tile_archive_phone">Archiv</string>
	<string name="update_tile_phone">Update</string>
	<string name="tile_device_sync_phone">Geräte-&#10;Sync</string>
	<string name="tile_sales_tablet">Verkauf</string>
	<string name="tile_orders_tablet">Bestellungen</string>
	<string name="tile_daily_report_tablet">Tagesabschluss</string>
	<string name="tile_settings_tablet">Einstellungen</string>
	<string name="tile_item_maintenance_tablet">Artikelpflege</string>
	<string name="tile_deposit_return_tablet">Pfandrückgabe</string>
	<string name="tile_archive_tablet">Archiv</string>
	<string name="tile_update_tablet">Update</string>
	<string name="tile_device_sync_tablet">Geräte-Sync</string>
	<string name="tile_item_maintenance">Artikel-&#10;pflege</string>
	<string name="tile_settings">Einstellungen</string>
	<string name="tile_deposit_return">Pfand-&#10;rückgabe</string>
	<string name="tile_archive">Archiv</string>
	<string name="update_tile">Update</string>
	<string name="update_tile_symbol">⟳
Update</string>
	<string name="update_available">Update verfügbar. Installation kann über den Update-Kanal erfolgen.</string>
	<string name="no_update_available">Aktuell ist kein Update verfügbar.</string>
	<string name="update_start_failed">Update konnte nicht gestartet werden.</string>
	<string name="update_downloading">Update wird heruntergeladen…</string>
	<string name="update_download_failed">Update-Download fehlgeschlagen.</string>
	<string name="allow_unknown_sources">Bitte Installation aus dieser Quelle erlauben und erneut auf Update tippen.</string>
	<string name="changelog_title">Changelog</string>
	<string name="changelog_message">Version %1$s
Neu: Direkter Update-Download und Installation.
Aktualisiert: Kachel-Layout und Stabilität.</string>
</resources>
